<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.1</version>
    <relativePath/>
  </parent>
  <groupId>se.swedishpolls</groupId>
  <artifactId>swedishpolls</artifactId>
  <version>0.1.0</version>
  <properties>
    <java.version>25</java.version>
    <project.build.outputTimestamp>2026-09-08T00:00:00Z</project.build.outputTimestamp>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>1.14.1</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-flyway</artifactId>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-database-postgresql</artifactId>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.ejml</groupId>
      <artifactId>ejml-simple</artifactId>
      <version>0.46.1</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <targetPath>static</targetPath>
        <directory>${project.build.directory}/frontend</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>com.github.eirslett</groupId>
        <artifactId>frontend-maven-plugin</artifactId>
        <version>2.0.2</version>
        <configuration>
          <workingDirectory>frontend</workingDirectory>
          <installDirectory>${project.build.directory}</installDirectory>
          <nodeVersion>v24.13.1</nodeVersion>
          <npmVersion>11.8.0</npmVersion>
        </configuration>
        <executions>
          <execution>
            <id>node</id>
            <goals>
              <goal>install-node-and-npm</goal>
            </goals>
          </execution>
          <execution>
            <id>npm-ci</id>
            <goals>
              <goal>npm</goal>
            </goals>
            <configuration>
              <arguments>ci --no-audit --no-fund</arguments>
            </configuration>
          </execution>
          <execution>
            <id>frontend-check</id>
            <goals>
              <goal>npm</goal>
            </goals>
            <configuration>
              <arguments>run check</arguments>
            </configuration>
          </execution>
          <execution>
            <id>frontend-build</id>
            <goals>
              <goal>npm</goal>
            </goals>
            <configuration>
              <arguments>run build</arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>toolchain</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>[25,26)</version>
                </requireJavaVersion>
                <requireMavenVersion>
                  <version>[3.6.3,4)</version>
                </requireMavenVersion>
                <requireReleaseDeps/>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <failIfNoTests>true</failIfNoTests>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.10.2</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <version>1.36.1</version>
              <style>GOOGLE</style>
            </googleJavaFormat>
            <removeUnusedImports/>
            <importOrder/>
          </java>
          <pom>
            <sortPom/>
          </pom>
          <formats>
            <format>
              <includes>
                <include>**/*.yml</include>
                <include>**/*.yaml</include>
                <include>**/*.md</include>
              </includes>
              <excludes>
                <exclude>target/**</exclude>
                <exclude>frontend/node_modules/**</exclude>
                <exclude>frontend/dist/**</exclude>
              </excludes>
              <trimTrailingWhitespace/>
              <endWithNewline/>
              <indent>
                <spaces>true</spaces>
                <spacesPerTab>2</spacesPerTab>
              </indent>
            </format>
          </formats>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check-validate</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>validate</phase>
          </execution>
          <execution>
            <id>spotless-check-verify</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
